# FCAE_VPN

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  fcae.toml
.cargo/: config.toml
.github/workflows/: build_all.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fc/fcaevpn/: FCAEVpnService.java  MainActivity.java  MainActivity.kt  NativeEngine.kt  VpnNotification.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cmake/: copy_if_exists.cmake
core/: Cargo.toml
core/aether-engine/: Cargo.toml
core/aether-engine/src/: aethernoize.rs  buffer_pool.rs  cli.rs  config.rs  consts.rs  http_proxy.rs  lib.rs  main.rs  masque_h2.rs  netstack.rs  noize.rs  prober.rs  quic.rs  socks.rs  stats.rs  sysprofile.rs  tls.rs  tun.rs  tunnelping.rs  wg_prober.rs  wireguard.rs
core/aether-ffi/: Cargo.toml
core/aether-ffi/src/: lib.rs  libffi.rs
crates/: Cargo.toml
crates/aether-engine/: Cargo.toml
crates/aether-engine/src/: lib.rs
crates/aether-ffi/: Cargo.toml
crates/aether-ffi/src/: lib.rs
include/: aether_ffi.h
src_cpp/: android_jni.cpp  app.manifest  gen_icon.py  icon.rc  main_android_gles3.cpp  main_linux_glfw.cpp  main_win32_dx11.cpp  ui_render.cpp  ui_render.h
