[workspace]
# Workspace lives under core/ so path deps into ../quiche keep quiche's own
# workspace (edition/license via workspace = true). Engine is vendored in
# core/aether-engine; only the quiche submodule is required at build time.
members = ["aether-ffi"]
exclude = ["aether-engine"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
